@@ -862,6 +862,67 @@ test largesteigen-3 "power method" -body {
     set errmsg
 } -result {Cannot continue power method : matrix is singular}
 
+# Conforming - ticket 776a75f14f53b5c9a06fe3f3892485a6efe1dc20
+test conforming-1 "Conforming shapes" -body {
+    set m1 {{1 2}
+            {3 4}}
+    set m2 {{1 3}
+            {3 4}}
+    conforming shape $m1 $m2
+} -result 1
+test conforming-2 "Non-conforming shapes" -body {
+    set m1 {{1 2}
+            {3 4}}
+    set m2 {{1 3 4}
+            {3 4 5}}
+    conforming shape $m1 $m2
+} -result 0
+test conforming-3 "Conforming matmul - two matrices" -body {
+    set m1 {{1 2}
+            {3 4}
+            {5 6}}
+    set m2 {{1 3 4}
+            {3 4 5}}
+    conforming matmul $m1 $m2
+} -result 1
+test conforming-4 "Conforming matmul - two matrices, reversed" -body {
+    set m1 {{1 2}
+            {3 4}
+            {5 6}}
+    set m2 {{1 3 4}
+            {3 4 5}}
+    conforming matmul $m2 $m1
+} -result 1
+test conforming-5 "Conforming matmul - vector-matrix" -body {
+    set mat {{1 2}
+             {3 4}
+             {5 6}}
+    set vec {1 3 4}
+    conforming matmul $vec $mat
+} -result 1
+test conforming-6 "Conforming matmul - vector-matrix" -body {
+    set mat {{1 2}
+             {3 4}
+             {5 6}}
+    set vec {1 3}
+    conforming matmul $mat $vec
+} -result 1
+test conforming-7 "Non-conforming matmul - vector-matrix" -body {
+    set mat {{1 2}
+             {3 4}
+             {5 6}}
+    set vec {1 3}
+    conforming matmul $vec $mat
+} -result 0
+test conforming-7 "Non-conforming matmul - vector-matrix" -body {
+    set mat {{1 2}
+             {3 4}
+             {5 6}}
+    set vec {1 2 3}
+    conforming matmul $mat $vec
+} -result 0
+
+
 # Additional tests: procedures by Federico Ferri
 #source ferri/ferri.test
 
